# ML_EndtoEnd_Projects

./: README.md
Fitness_check/: README.md  pyproject.toml  requirements.txt
Fitness_check/src/: extractor.py  main.py
Fitness_check/src/extractor/: extractor.py
Fitness_check/test/: test_extractor.py
fraud_detection/: pyproject.toml
fraud_detection/mlruns/0/: meta.yaml
fraud_detection/mlruns/0/0090e084b2494d2dafa51be7a0c7d5ab/: meta.yaml
fraud_detection/mlruns/0/05d5a35a6ebe47dca389c92fe3beb4b9/: meta.yaml
fraud_detection/mlruns/0/0840b3bd6c2240fea5c9ad34e3c3b8e1/: meta.yaml
fraud_detection/mlruns/0/092577e9acbe4298b6e78c3575597e69/: meta.yaml
fraud_detection/mlruns/0/1619495111ad4001a3e522a14ed61abd/: meta.yaml
fraud_detection/mlruns/0/19d2ff0ac7df4380941edab32ae3687d/: meta.yaml
fraud_detection/mlruns/0/1d673b8c36a5444aa50e9bdc875cf92c/: meta.yaml
fraud_detection/mlruns/0/234fa3d0ce544d828fbcdc3c4aeec984/: meta.yaml
fraud_detection/mlruns/0/27be017519e24e018e539870890a5e53/: meta.yaml
fraud_detection/mlruns/0/2ca45c9b9ffc476da0dd0f811fe5924a/: meta.yaml
fraud_detection/mlruns/0/312de1ef2784454899fc4d7b14f57bd6/: meta.yaml
fraud_detection/mlruns/0/36b9bcd35a524f00a56cfce0e0311bfb/: meta.yaml
fraud_detection/mlruns/models/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
fraud_detection/report/: PitchPresentation.pptx
fraud_detection/src/: data.py  eda.py  feature.py  inference.py  score.py  train.py
sleep_state_detector/: pyproject.toml  sleep_detector.pkl
sleep_state_detector/notebooks/: 01_dataexploration.ipynb  02_dataprocessing.ipynb  03_modelevaluation.ipynb  feature-engineering-and-ensemble.ipynb
(+212 files in other folders)
