[tool.poetry]
name = "fitness-check"
version = "0.1.0"
description = ""
authors = ["Olumide Odetunde <odetundeolumide95@gmail.com>"]
readme = "README.md"
packages = [{include = "fitness_check"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
beautifulsoup4 = "^4.12.2"
lxml = "^5.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
pickleshare = "^0.7.5"
argparse = "^1.4.0"
logging = "^0.4.9.6"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
