[tool.poetry]
name = "featurespacetakehome"
version = "0.1.0"
description = ""
authors = ["Olumide Odetunde <odetundeolumide95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.0.0"
numpy = "^2.0.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pickleshare = "^0.7.5"
pylint = "^3.2.5"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
