[tool.poetry]
name = "sleep-state-detector"
version = "0.1.0"
description = ""
authors = ["Olumide Odetunde <odetundeolumide95@gmail.com>"]
readme = "README.md"
packages = [{include = "sleep_state_detector"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
jupyter = "^1.0.0"
pyarrow = "^13.0.0"
fastparquet = "^2023.8.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
pytest = "^7.4.2"
polars = "^0.19.3"
plotly = "^5.17.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
